tests/init_state/ref_obligations/shared_ref_write.sim
# Every mutation through a shared reference fires INIT-WriteThroughSharedRef.
# `write` covers plain `r.* = v`; `move_out` covers `move r.*` (an rvalue
# operand that invalidates the pointee) — the message distinguishes the two.

struct Owned: Move { val: i64 }

fn write(r: &i64) {
  entry:
    r.* = 1;
    return
}

fn move_out(r: &Owned) {
  x: Owned;
  entry:
    x = move r.*;
    return
}
